prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: parkit
spec:
  type: NodePort 
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      # nodePort: 31985
