prometheus/parkit-monitoring-ingress.yaml
# parkit-total-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parkit-total-ingress
  namespace: parkit
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 1. 프로메테우스
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus
            port:
              number: 9090
      # 2. 그라파나
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000
