prometheus/total-ingress.yaml
# Web / Monitoring (no rewrite)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parkit-total-ingress
  namespace: parkit
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    # rewrite-target 추가 (경로 재작성을 위해 필요)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000

---

# Service APIs (rewrite + CORS)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parkit-service-ingress
  namespace: parkit
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/websocket-services: "socket-service"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://192.168.201.98:50028"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /socket(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: socket-service
            port:
              number: 8082
      - path: /report(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: report-service
            port:
              number: 8083
